--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2022-09-05 15:30:34.076578 </em></p>
+                <p><em> 2022-09-05 15:45:34.776171 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -52,7 +52,7 @@
     <tr>
       <th>0</th>
       <td>VTB</td>
-      <td>Trả cổ tức bằng tiền mặt</td>
+      <td>VTB - Trả cổ tức Đợt 2 năm 2021 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-09-05</td>
       <td>2022-09-13</td>
       <td>500.0</td>
@@ -584,7 +584,7 @@
     <tr>
       <th>0</th>
       <td>VTB</td>
-      <td>Trả cổ tức bằng tiền mặt</td>
+      <td>VTB - Trả cổ tức Đợt 2 năm 2021 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-09-05</td>
       <td>2022-09-13</td>
       <td>500.0</td>
