--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2022-09-06 15:15:34.122318 </em></p>
+                <p><em> 2022-09-06 15:30:36.961260 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -68,6 +68,23 @@
     </tr>
     <tr>
       <th>1</th>
+      <td>LGC</td>
+      <td>LGC - Trả cổ tức Đợt 1 năm 2021 bằng tiền 400 đồng/cổ phiếu</td>
+      <td>2022-09-06</td>
+      <td>2022-09-29</td>
+      <td>400.0</td>
+      <td>0.0</td>
+      <td>2022-09-28</td>
+      <td>22 days</td>
+      <td>46050.0</td>
+      <td>46050.0</td>
+      <td>0.87</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=LGC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/LGC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>2</th>
       <td>DMC</td>
       <td>DMC - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2022-09-05</td>
@@ -84,7 +101,7 @@
       <td><a href="https://simplize.vn/company/DMC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>VTB</td>
       <td>VTB - Trả cổ tức Đợt 2 năm 2021 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-09-05</td>
@@ -101,7 +118,7 @@
       <td><a href="https://simplize.vn/company/VTB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>SBV</td>
       <td>SBV - Trả cổ tức Cả năm năm 2021 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -118,7 +135,7 @@
       <td><a href="https://simplize.vn/company/SBV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>HTI</td>
       <td>HTI - Trả cổ tức Cả năm năm 2021 bằng tiền 1800 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -135,7 +152,7 @@
       <td><a href="https://simplize.vn/company/HTI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>HCC</td>
       <td>HCC - Trả cổ tức Cả năm năm 2021 bằng tiền 350 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -152,7 +169,7 @@
       <td><a href="https://simplize.vn/company/HCC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>SRC</td>
       <td>SRC - Trả cổ tức Cả năm năm 2021 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -169,7 +186,7 @@
       <td><a href="https://simplize.vn/company/SRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>TDB</td>
       <td>TDB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -186,7 +203,7 @@
       <td><a href="https://simplize.vn/company/TDB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>HSG</td>
       <td>HSG - Phát hành cổ phiếu trả cổ tức tỷ lệ 20%</td>
       <td>2022-08-31</td>
@@ -203,7 +220,7 @@
       <td><a href="https://simplize.vn/company/HSG" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>BTS</td>
       <td>BTS - Trả cổ tức Cả năm năm 2021 bằng tiền 400 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -220,7 +237,7 @@
       <td><a href="https://simplize.vn/company/BTS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>SGR</td>
       <td>SGR - Trả cổ tức Cả năm năm 2021 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -237,7 +254,7 @@
       <td><a href="https://simplize.vn/company/SGR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>GIL</td>
       <td>GIL - Phát hành cổ phiếu trả cổ tức tỷ lệ 15%</td>
       <td>2022-08-31</td>
@@ -254,7 +271,7 @@
       <td><a href="https://simplize.vn/company/GIL" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>VPI</td>
       <td>VPI - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
       <td>2022-08-31</td>
@@ -271,7 +288,7 @@
       <td><a href="https://simplize.vn/company/VPI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>SNC</td>
       <td>SNC - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-08-30</td>
@@ -288,7 +305,7 @@
       <td><a href="https://simplize.vn/company/SNC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>14</th>
+      <th>15</th>
       <td>SZL</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-08-27</td>
@@ -305,7 +322,7 @@
       <td><a href="https://simplize.vn/company/SZL" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>15</th>
+      <th>16</th>
       <td>DIH</td>
       <td>DIH - Trả cổ tức Cả năm năm 2021 bằng tiền 100 đồng/cổ phiếu</td>
       <td>2022-08-26</td>
@@ -322,7 +339,7 @@
       <td><a href="https://simplize.vn/company/DIH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>16</th>
+      <th>17</th>
       <td>BIC</td>
       <td>BIC - Trả cổ tức Cả năm năm 2021 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-08-26</td>
@@ -339,7 +356,7 @@
       <td><a href="https://simplize.vn/company/BIC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>17</th>
+      <th>18</th>
       <td>SZL</td>
       <td>SZL - Trả cổ tức Cả năm năm 2021 bằng tiền 4000 đồng/cổ phiếu</td>
       <td>2022-08-26</td>
@@ -356,7 +373,7 @@
       <td><a href="https://simplize.vn/company/SZL" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>18</th>
+      <th>19</th>
       <td>X20</td>
       <td>X20 - Trả cổ tức Cả năm năm 2021 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-08-26</td>
@@ -373,7 +390,7 @@
       <td><a href="https://simplize.vn/company/X20" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>19</th>
+      <th>20</th>
       <td>BTP</td>
       <td>BTP - Trả cổ tức Cả năm năm 2021 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-08-25</td>
@@ -390,7 +407,7 @@
       <td><a href="https://simplize.vn/company/BTP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>20</th>
+      <th>21</th>
       <td>ALT</td>
       <td>ALT - Trả cổ tức Cả năm năm 2021 bằng tiền 700 đồng/cổ phiếu</td>
       <td>2022-08-25</td>
@@ -407,7 +424,7 @@
       <td><a href="https://simplize.vn/company/ALT" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>21</th>
+      <th>22</th>
       <td>NAV</td>
       <td>NAV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 700 đồng/cổ phiếu</td>
       <td>2022-08-25</td>
@@ -424,7 +441,7 @@
       <td><a href="https://simplize.vn/company/NAV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>22</th>
+      <th>23</th>
       <td>XLV</td>
       <td>XLV - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-08-24</td>
@@ -441,7 +458,7 @@
       <td><a href="https://simplize.vn/company/XLV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>23</th>
+      <th>24</th>
       <td>GMC</td>
       <td>GMC - Trả cổ tức Đợt 2 năm 2021 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-08-24</td>
@@ -458,7 +475,7 @@
       <td><a href="https://simplize.vn/company/GMC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>24</th>
+      <th>25</th>
       <td>KTW</td>
       <td>KTW - Trả cổ tức Cả năm năm 2021 bằng tiền 368 đồng/cổ phiếu</td>
       <td>2022-08-24</td>
@@ -475,7 +492,7 @@
       <td><a href="https://simplize.vn/company/KTW" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>25</th>
+      <th>26</th>
       <td>TVH</td>
       <td>TVH - Trả cổ tức Cả năm năm 2021 bằng tiền 3327 đồng/cổ phiếu</td>
       <td>2022-08-23</td>
@@ -492,7 +509,7 @@
       <td><a href="https://simplize.vn/company/TVH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>26</th>
+      <th>27</th>
       <td>FCM</td>
       <td>FCM - Trả cổ tức Cả năm năm 2021 bằng tiền 250 đồng/cổ phiếu</td>
       <td>2022-08-05</td>
@@ -509,7 +526,7 @@
       <td><a href="https://simplize.vn/company/FCM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>27</th>
+      <th>28</th>
       <td>CMV</td>
       <td>CMV - Trả cổ tức Cả năm năm 2021 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-08-01</td>
@@ -526,7 +543,7 @@
       <td><a href="https://simplize.vn/company/CMV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>28</th>
+      <th>29</th>
       <td>TRC</td>
       <td>TRC - Trả cổ tức Đợt 2 năm 2021 bằng tiền 900 đồng/cổ phiếu</td>
       <td>2022-07-27</td>
@@ -583,6 +600,23 @@
     </tr>
     <tr>
       <th>1</th>
+      <td>LGC</td>
+      <td>LGC - Trả cổ tức Đợt 1 năm 2021 bằng tiền 400 đồng/cổ phiếu</td>
+      <td>2022-09-06</td>
+      <td>2022-09-29</td>
+      <td>400.0</td>
+      <td>0.0</td>
+      <td>2022-09-28</td>
+      <td>22 days</td>
+      <td>46050.0</td>
+      <td>46050.0</td>
+      <td>0.87</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=LGC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/LGC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>2</th>
       <td>DMC</td>
       <td>DMC - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2022-09-05</td>
@@ -599,7 +633,7 @@
       <td><a href="https://simplize.vn/company/DMC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>VTB</td>
       <td>VTB - Trả cổ tức Đợt 2 năm 2021 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-09-05</td>
@@ -616,7 +650,7 @@
       <td><a href="https://simplize.vn/company/VTB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>SBV</td>
       <td>SBV - Trả cổ tức Cả năm năm 2021 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -633,7 +667,7 @@
       <td><a href="https://simplize.vn/company/SBV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>HTI</td>
       <td>HTI - Trả cổ tức Cả năm năm 2021 bằng tiền 1800 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -650,7 +684,7 @@
       <td><a href="https://simplize.vn/company/HTI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>HCC</td>
       <td>HCC - Trả cổ tức Cả năm năm 2021 bằng tiền 350 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -667,7 +701,7 @@
       <td><a href="https://simplize.vn/company/HCC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>SRC</td>
       <td>SRC - Trả cổ tức Cả năm năm 2021 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -684,7 +718,7 @@
       <td><a href="https://simplize.vn/company/SRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>TDB</td>
       <td>TDB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -701,7 +735,7 @@
       <td><a href="https://simplize.vn/company/TDB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>HSG</td>
       <td>HSG - Phát hành cổ phiếu trả cổ tức tỷ lệ 20%</td>
       <td>2022-08-31</td>
@@ -718,7 +752,7 @@
       <td><a href="https://simplize.vn/company/HSG" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>BTS</td>
       <td>BTS - Trả cổ tức Cả năm năm 2021 bằng tiền 400 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -735,7 +769,7 @@
       <td><a href="https://simplize.vn/company/BTS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>SGR</td>
       <td>SGR - Trả cổ tức Cả năm năm 2021 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-08-31</td>
@@ -752,7 +786,7 @@
       <td><a href="https://simplize.vn/company/SGR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>GIL</td>
       <td>GIL - Phát hành cổ phiếu trả cổ tức tỷ lệ 15%</td>
       <td>2022-08-31</td>
@@ -769,7 +803,7 @@
       <td><a href="https://simplize.vn/company/GIL" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>VPI</td>
       <td>VPI - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
       <td>2022-08-31</td>
@@ -786,7 +820,7 @@
       <td><a href="https://simplize.vn/company/VPI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>SNC</td>
       <td>SNC - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-08-30</td>
@@ -803,7 +837,7 @@
       <td><a href="https://simplize.vn/company/SNC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>14</th>
+      <th>15</th>
       <td>SZL</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-08-27</td>
@@ -820,7 +854,7 @@
       <td><a href="https://simplize.vn/company/SZL" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>15</th>
+      <th>16</th>
       <td>DIH</td>
       <td>DIH - Trả cổ tức Cả năm năm 2021 bằng tiền 100 đồng/cổ phiếu</td>
       <td>2022-08-26</td>
@@ -837,7 +871,7 @@
       <td><a href="https://simplize.vn/company/DIH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>16</th>
+      <th>17</th>
       <td>BIC</td>
       <td>BIC - Trả cổ tức Cả năm năm 2021 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-08-26</td>
@@ -854,7 +888,7 @@
       <td><a href="https://simplize.vn/company/BIC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>17</th>
+      <th>18</th>
       <td>SZL</td>
       <td>SZL - Trả cổ tức Cả năm năm 2021 bằng tiền 4000 đồng/cổ phiếu</td>
       <td>2022-08-26</td>
@@ -871,7 +905,7 @@
       <td><a href="https://simplize.vn/company/SZL" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>18</th>
+      <th>19</th>
       <td>X20</td>
       <td>X20 - Trả cổ tức Cả năm năm 2021 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-08-26</td>
@@ -888,7 +922,7 @@
       <td><a href="https://simplize.vn/company/X20" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>19</th>
+      <th>20</th>
       <td>BTP</td>
       <td>BTP - Trả cổ tức Cả năm năm 2021 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-08-25</td>
@@ -905,7 +939,7 @@
       <td><a href="https://simplize.vn/company/BTP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>20</th>
+      <th>21</th>
       <td>ALT</td>
       <td>ALT - Trả cổ tức Cả năm năm 2021 bằng tiền 700 đồng/cổ phiếu</td>
       <td>2022-08-25</td>
@@ -922,7 +956,7 @@
       <td><a href="https://simplize.vn/company/ALT" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>21</th>
+      <th>22</th>
       <td>NAV</td>
       <td>NAV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 700 đồng/cổ phiếu</td>
       <td>2022-08-25</td>
@@ -939,7 +973,7 @@
       <td><a href="https://simplize.vn/company/NAV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>22</th>
+      <th>23</th>
       <td>XLV</td>
       <td>XLV - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-08-24</td>
@@ -956,7 +990,7 @@
       <td><a href="https://simplize.vn/company/XLV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>23</th>
+      <th>24</th>
       <td>GMC</td>
       <td>GMC - Trả cổ tức Đợt 2 năm 2021 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-08-24</td>
@@ -973,7 +1007,7 @@
       <td><a href="https://simplize.vn/company/GMC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>24</th>
+      <th>25</th>
       <td>KTW</td>
       <td>KTW - Trả cổ tức Cả năm năm 2021 bằng tiền 368 đồng/cổ phiếu</td>
       <td>2022-08-24</td>
@@ -990,7 +1024,7 @@
       <td><a href="https://simplize.vn/company/KTW" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>25</th>
+      <th>26</th>
       <td>TVH</td>
       <td>TVH - Trả cổ tức Cả năm năm 2021 bằng tiền 3327 đồng/cổ phiếu</td>
       <td>2022-08-23</td>
@@ -1007,7 +1041,7 @@
       <td><a href="https://simplize.vn/company/TVH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>26</th>
+      <th>27</th>
       <td>FCM</td>
       <td>FCM - Trả cổ tức Cả năm năm 2021 bằng tiền 250 đồng/cổ phiếu</td>
       <td>2022-08-05</td>
@@ -1024,7 +1058,7 @@
       <td><a href="https://simplize.vn/company/FCM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>27</th>
+      <th>28</th>
       <td>CMV</td>
       <td>CMV - Trả cổ tức Cả năm năm 2021 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-08-01</td>
@@ -1041,7 +1075,7 @@
       <td><a href="https://simplize.vn/company/CMV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>28</th>
+      <th>29</th>
       <td>TRC</td>
       <td>TRC - Trả cổ tức Đợt 2 năm 2021 bằng tiền 900 đồng/cổ phiếu</td>
       <td>2022-07-27</td>
