--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2022-12-22 17:15:35.076054 </em></p>
+                <p><em> 2022-12-22 17:30:39.177962 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -85,6 +85,23 @@
     </tr>
     <tr>
       <th>2</th>
+      <td>GKM</td>
+      <td>GKM - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
+      <td>2022-12-22</td>
+      <td>2022-12-30</td>
+      <td>0.0</td>
+      <td>10.0</td>
+      <td>2022-12-29</td>
+      <td>7 days</td>
+      <td>28200.0</td>
+      <td>28200.0</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=GKM" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/GKM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>3</th>
       <td>VCI</td>
       <td>VCI - Trả cổ tức Đợt 1 năm 2022 bằng tiền 700 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -101,7 +118,7 @@
       <td><a href="https://simplize.vn/company/VCI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>SBH</td>
       <td>SBH - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -118,7 +135,7 @@
       <td><a href="https://simplize.vn/company/SBH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>TIP</td>
       <td>TIP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -135,7 +152,7 @@
       <td><a href="https://simplize.vn/company/TIP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>TLG</td>
       <td>TLG - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -152,7 +169,7 @@
       <td><a href="https://simplize.vn/company/TLG" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>HAM</td>
       <td>HAM - Trả cổ tức Đợt 2 năm 2022 bằng tiền 400 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -169,7 +186,7 @@
       <td><a href="https://simplize.vn/company/HAM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>HNP</td>
       <td>HNP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-20</td>
@@ -186,7 +203,7 @@
       <td><a href="https://simplize.vn/company/HNP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>AGR</td>
       <td>AGR - Phát hành cổ phiếu thưởng tỷ lệ 1.602%</td>
       <td>2022-12-20</td>
@@ -203,7 +220,7 @@
       <td><a href="https://simplize.vn/company/AGR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>QHD</td>
       <td>QHD - Trả cổ tức Đợt 1 năm 2022 bằng tiền 2000 đồng/cổ phiếu</td>
       <td>2022-12-20</td>
@@ -220,7 +237,7 @@
       <td><a href="https://simplize.vn/company/QHD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>HLD</td>
       <td>HLD - Trả cổ tức Cả năm năm 2021 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-16</td>
@@ -237,7 +254,7 @@
       <td><a href="https://simplize.vn/company/HLD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>NSC</td>
       <td>NSC - Trả cổ tức Đợt 2 năm 2021 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-12-16</td>
@@ -254,7 +271,7 @@
       <td><a href="https://simplize.vn/company/NSC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>HTC</td>
       <td>HTC - Trả cổ tức Đợt 2 năm 2022 bằng tiền 300 đồng/cổ phiếu</td>
       <td>2022-12-16</td>
@@ -271,7 +288,7 @@
       <td><a href="https://simplize.vn/company/HTC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>PGV</td>
       <td>PGV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 550 đồng/cổ phiếu</td>
       <td>2022-12-15</td>
@@ -288,7 +305,7 @@
       <td><a href="https://simplize.vn/company/PGV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>14</th>
+      <th>15</th>
       <td>ISH</td>
       <td>ISH - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-15</td>
@@ -305,7 +322,7 @@
       <td><a href="https://simplize.vn/company/ISH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>15</th>
+      <th>16</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -322,7 +339,7 @@
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>16</th>
+      <th>17</th>
       <td>PAI</td>
       <td>PAI - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -339,7 +356,7 @@
       <td><a href="https://simplize.vn/company/PAI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>17</th>
+      <th>18</th>
       <td>DHP</td>
       <td>DHP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -356,7 +373,7 @@
       <td><a href="https://simplize.vn/company/DHP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>18</th>
+      <th>19</th>
       <td>LMI</td>
       <td>LMI - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-12</td>
@@ -373,7 +390,7 @@
       <td><a href="https://simplize.vn/company/LMI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>19</th>
+      <th>20</th>
       <td>GE2</td>
       <td>GE2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-09</td>
@@ -390,7 +407,7 @@
       <td><a href="https://simplize.vn/company/GE2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>20</th>
+      <th>21</th>
       <td>HC3</td>
       <td>HC3 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-08</td>
@@ -407,7 +424,7 @@
       <td><a href="https://simplize.vn/company/HC3" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>21</th>
+      <th>22</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -424,7 +441,7 @@
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>22</th>
+      <th>23</th>
       <td>SBA</td>
       <td>SBA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -441,7 +458,7 @@
       <td><a href="https://simplize.vn/company/SBA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>23</th>
+      <th>24</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -458,7 +475,7 @@
       <td><a href="https://simplize.vn/company/DRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>24</th>
+      <th>25</th>
       <td>NBT</td>
       <td>NBT - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -475,7 +492,7 @@
       <td><a href="https://simplize.vn/company/NBT" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>25</th>
+      <th>26</th>
       <td>HFB</td>
       <td>HFB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 400 đồng/cổ phiếu</td>
       <td>2022-12-02</td>
@@ -492,7 +509,7 @@
       <td><a href="https://simplize.vn/company/HFB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>26</th>
+      <th>27</th>
       <td>BCF</td>
       <td>BCF - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-01</td>
@@ -509,7 +526,7 @@
       <td><a href="https://simplize.vn/company/BCF" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>27</th>
+      <th>28</th>
       <td>PIC</td>
       <td>PIC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-11-23</td>
@@ -583,6 +600,23 @@
     </tr>
     <tr>
       <th>2</th>
+      <td>GKM</td>
+      <td>GKM - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
+      <td>2022-12-22</td>
+      <td>2022-12-30</td>
+      <td>0.0</td>
+      <td>10.0</td>
+      <td>2022-12-29</td>
+      <td>7 days</td>
+      <td>28200.0</td>
+      <td>28200.0</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=GKM" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/GKM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>3</th>
       <td>VCI</td>
       <td>VCI - Trả cổ tức Đợt 1 năm 2022 bằng tiền 700 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -599,7 +633,7 @@
       <td><a href="https://simplize.vn/company/VCI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>SBH</td>
       <td>SBH - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -616,7 +650,7 @@
       <td><a href="https://simplize.vn/company/SBH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>TIP</td>
       <td>TIP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -633,7 +667,7 @@
       <td><a href="https://simplize.vn/company/TIP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>TLG</td>
       <td>TLG - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -650,7 +684,7 @@
       <td><a href="https://simplize.vn/company/TLG" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>HAM</td>
       <td>HAM - Trả cổ tức Đợt 2 năm 2022 bằng tiền 400 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -667,7 +701,7 @@
       <td><a href="https://simplize.vn/company/HAM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>HNP</td>
       <td>HNP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-20</td>
@@ -684,7 +718,7 @@
       <td><a href="https://simplize.vn/company/HNP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>AGR</td>
       <td>AGR - Phát hành cổ phiếu thưởng tỷ lệ 1.602%</td>
       <td>2022-12-20</td>
@@ -701,7 +735,7 @@
       <td><a href="https://simplize.vn/company/AGR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>QHD</td>
       <td>QHD - Trả cổ tức Đợt 1 năm 2022 bằng tiền 2000 đồng/cổ phiếu</td>
       <td>2022-12-20</td>
@@ -718,7 +752,7 @@
       <td><a href="https://simplize.vn/company/QHD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>HLD</td>
       <td>HLD - Trả cổ tức Cả năm năm 2021 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-16</td>
@@ -735,7 +769,7 @@
       <td><a href="https://simplize.vn/company/HLD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>NSC</td>
       <td>NSC - Trả cổ tức Đợt 2 năm 2021 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-12-16</td>
@@ -752,7 +786,7 @@
       <td><a href="https://simplize.vn/company/NSC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>HTC</td>
       <td>HTC - Trả cổ tức Đợt 2 năm 2022 bằng tiền 300 đồng/cổ phiếu</td>
       <td>2022-12-16</td>
@@ -769,7 +803,7 @@
       <td><a href="https://simplize.vn/company/HTC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>PGV</td>
       <td>PGV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 550 đồng/cổ phiếu</td>
       <td>2022-12-15</td>
@@ -786,7 +820,7 @@
       <td><a href="https://simplize.vn/company/PGV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>14</th>
+      <th>15</th>
       <td>ISH</td>
       <td>ISH - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-15</td>
@@ -803,7 +837,7 @@
       <td><a href="https://simplize.vn/company/ISH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>15</th>
+      <th>16</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -820,7 +854,7 @@
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>16</th>
+      <th>17</th>
       <td>PAI</td>
       <td>PAI - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -837,7 +871,7 @@
       <td><a href="https://simplize.vn/company/PAI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>17</th>
+      <th>18</th>
       <td>DHP</td>
       <td>DHP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -854,7 +888,7 @@
       <td><a href="https://simplize.vn/company/DHP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>18</th>
+      <th>19</th>
       <td>LMI</td>
       <td>LMI - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-12</td>
@@ -871,7 +905,7 @@
       <td><a href="https://simplize.vn/company/LMI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>19</th>
+      <th>20</th>
       <td>GE2</td>
       <td>GE2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-09</td>
@@ -888,7 +922,7 @@
       <td><a href="https://simplize.vn/company/GE2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>20</th>
+      <th>21</th>
       <td>HC3</td>
       <td>HC3 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-08</td>
@@ -905,7 +939,7 @@
       <td><a href="https://simplize.vn/company/HC3" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>21</th>
+      <th>22</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -922,7 +956,7 @@
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>22</th>
+      <th>23</th>
       <td>SBA</td>
       <td>SBA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -939,7 +973,7 @@
       <td><a href="https://simplize.vn/company/SBA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>23</th>
+      <th>24</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -956,7 +990,7 @@
       <td><a href="https://simplize.vn/company/DRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>24</th>
+      <th>25</th>
       <td>NBT</td>
       <td>NBT - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -973,7 +1007,7 @@
       <td><a href="https://simplize.vn/company/NBT" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>25</th>
+      <th>26</th>
       <td>HFB</td>
       <td>HFB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 400 đồng/cổ phiếu</td>
       <td>2022-12-02</td>
@@ -990,7 +1024,7 @@
       <td><a href="https://simplize.vn/company/HFB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>26</th>
+      <th>27</th>
       <td>BCF</td>
       <td>BCF - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-01</td>
@@ -1007,7 +1041,7 @@
       <td><a href="https://simplize.vn/company/BCF" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>27</th>
+      <th>28</th>
       <td>PIC</td>
       <td>PIC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-11-23</td>
